syntax = "proto3";

package auth.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/ritchieridanko/erteku/shared/contract/apis/v1;apis";

service AuthService {
  rpc SignUp(SignUpRequest) returns (AuthResponse);
  rpc SignIn(SignInRequest) returns (AuthResponse);
  rpc SignOut(SignOutRequest) returns (google.protobuf.Empty);
  rpc IsEmailAvailable(EmailCheckRequest) returns (EmailCheckResponse);
}

message Auth {
  int64 id = 1;
  string email = 2;
  bool email_verified = 3;
}

message AuthToken {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3; // seconds
}

message AuthResponse {
  AuthToken auth_token = 1;
  Auth auth = 2;
}

message SignUpRequest {
  string email = 1;
  string password = 2;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignOutRequest {
  string refresh_token = 1;
}

message EmailCheckRequest {
  string email = 1;
}

message EmailCheckResponse {
  bool available = 1;
}
